# dkimproxy

./: .gitignore  ChangeLog  INSTALL  Makefile.am  NEWS  README  RELEASE_NOTES  TODO  config_file_format.txt  configure.ac  dkimproxy.spec.in  init-script.sh
dkimproxy/branches/auth-results/: ChangeLog  NEWS
dkimproxy/branches/auth-results/lib/: AuthResults.pm  test_auth_results.pl
dkimproxy/branches/auth-results/scripts/: dkimverify.pl
dkimproxy/branches/configfile/: ChangeLog  INSTALL  NEWS  RELEASE_NOTES  TODO  config_file_format.txt  configure.ac  sample-dkim-init-script.sh
dkimproxy/branches/configfile/lib/: MySmtpProxyServer.pm
dkimproxy/branches/configfile/scripts/: Makefile.am  dkim_responder.pl  dkimproxy.in  dkimproxy.out  dkimproxy_in.conf.example  dkimsign.pl  example.cnf
dkimproxy/branches/configfile/tests/: original.txt  test5.txt
dkimproxy/branches/configfile/tests/can/: original.txt  test-relaxed-simple.txt  test-simple-simple.txt  test-simple.txt
dkimproxy/branches/configfile/tests/variant_keys/: Makefile.am
dkimproxy/branches/configfile/tests/variant_sigs/: Makefile.am  invalid1.txt  invalid7.txt  test1.txt  test4.txt
dkimproxy/branches/dir-layout/: configure.ac
dkimproxy/branches/dir-layout/scripts/: Makefile.am
dkimproxy/branches/v0-series/: ChangeLog  NEWS
dkimproxy/branches/v1.0/: ChangeLog  NEWS  README  RELEASE_NOTES  TODO  configure.ac
dkimproxy/branches/v1.1/: ChangeLog  NEWS  RELEASE_NOTES  configure.ac
dkimproxy/branches/v1.1/scripts/: dkim_milter.out  dkim_responder.pl  dkimproxy.in
dkimproxy/branches/v1.2/: README
dkimproxy/tags/0.15/: ChangeLog  NEWS  TODO
dkimproxy/tags/0.15/scripts/: dkimsign.pl
dkimproxy/tags/0.15/tests/: index.txt  original3.txt  test0.txt  test3.txt
dkimproxy/tags/0.15/tests/can/: test-nowsp.txt
dkimproxy/tags/0.15/tests/variant_sigs/: index.txt  invalid2.txt  invalid5.txt  invalid6.txt  invalid9.txt  test0.txt  test6.txt
dkimproxy/tags/1.0/: configure.ac  sample-dkim-init-script.sh
dkimproxy/tags/1.0.1/: RELEASE_NOTES
dkimproxy/tags/1.0.1/scripts/: dkimproxy.out
dkimproxy/tags/1.1/: AUTHORS  NEWS  configure.ac
dkimproxy/tags/1.1/scripts/: dkimproxy.in
dkimproxy/tags/1.1rc1/scripts/: dkim_responder.pl  dkimproxy.out
dkimproxy/tags/1.2/: ChangeLog  acinclude.m4  configure.ac
dkimproxy/tags/1.2/scripts/: Makefile.am  dkimproxy_out.conf.example
dkimproxy/tags/1.2beta1/: ChangeLog  configure.ac
dkimproxy/tags/1.2beta1/scripts/: dkimproxy.in
dkimproxy/tags/1.3/: configure.ac
dkimproxy/tags/1.3/scripts/: dkimproxy.out
dkimproxy/tags/1.3/tests/: multi_domain.conf
dkimproxy/tags/1.3beta1/: ChangeLog  NEWS  configure.ac
dkimproxy/tags/1.3beta1/scripts/: dkim_responder.pl  dkimproxy.out
dkimproxy/tags/1.3beta2/: TODO  configure.ac
dkimproxy/tags/1.3beta2/scripts/: dkim_responder.pl
dkimproxy/tags/1.3beta2/tests/: listid_map.txt  lmsg3.txt
dkimproxy/tags/1.4/: INSTALL  RELEASE_NOTES
dkimproxy/tags/1.4.1/: AUTHORS  Makefile.am  NEWS  RELEASE_NOTES  configure.ac  dkimproxy.spec.in  sample-dkim-init-script.sh.in
dkimproxy/tags/1.4.1/scripts/: dkimproxy.out
dkimproxy/tags/1.4.1/tests/: single_domain.t
dkimproxy/tags/1.4/lib/MSDW/: Makefile.am
dkimproxy/tags/1.4/scripts/: Makefile.am  dkimproxy_out.conf.example
dkimproxy/tags/1.4beta1/: ChangeLog  NEWS
dkimproxy/tags/1.4beta1/lib/: MySmtpProxyServer.pm
dkimproxy/tags/1.4beta1/scripts/: dkimproxy.out
dkimproxy/tags/1.4beta1/tests/: lmsg1.txt
dkimproxy/tags/1.4rc1/: RELEASE_NOTES
dkimproxy/tags/1.4rc1/tests/: listid_map.t  methods1.cfg  msg3.txt  smtp_sink.pl
dkimproxy/trunk/: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  RELEASE_NOTES  TODO  acinclude.m4  alternate_verify.pl  config_file_format.txt  configure.ac  dkimproxy.spec.in  init-script.sh  install-perl-script.pl  sample-dkim-init-script.sh
dkimproxy/trunk/lib/: DKMessage.pm  LookupMap.pm  Makefile.am  MySmtpProxyServer.pm
dkimproxy/trunk/lib/MSDW/SMTP/: Makefile.am
dkimproxy/trunk/lib/Mail/: Makefile.am
dkimproxy/trunk/lib/Mail/DKIM/: Common.pm  KeyValueList.pm  Makefile.am  MessageParser.pm  Policy.pm  PrivateKey.pm  PublicKey.pm  Signer.pm  SignerPolicy.pm  SigningFilter.pm  Verifier.pm
dkimproxy/trunk/lib/Mail/DKIM/Algorithm/: Makefile.am
dkimproxy/trunk/lib/Mail/DKIM/Canonicalization/: DkimCommon.pm
dkimproxy/trunk/lib/Mail/DomainKeys/: Header.pm  Makefile.am  Message.pm
dkimproxy/trunk/scripts/: Makefile.am  backwards_compatibility.txt  dkfilter.in  dkfilter.out  dkim_responder.pl  dkimproxy.in  dkimproxy.out  dkimsign.pl
dkimproxy/trunk/tests/: Makefile.am  TestHarnass.pm  listid_map.conf  listid_map2.conf  macros.t  methods.t  msg1.txt  multi_domain.t  single_domain.t  smtp_sink.pl  test1.txt  test2.txt
dkimproxy/trunk/tests/variant_sigs/: index.txt  invalid8.txt  test3.txt  test5.txt
lib/: AuthResults.pm  LookupMap.pm  Makefile.am  MySmtpProxyServer.pm  MySmtpServer.pm
lib/Mail/DKIM/: Makefile.am  Policy.pm  PublicKey.pm  Signature.pm  Signer.pm  Verifier.pm
lib/Mail/DKIM/Algorithm/: rsa_sha1.pm
lib/Mail/DKIM/Canonicalization/: Makefile.am  relaxed.pm
lib/Mail/DomainKeys/: Policy.pm  Signature.pm
lib/Mail/DomainKeys/Key/: Makefile.am  Public.pm
scripts/: Makefile.am  dk_responder.pl  dkim_responder.pl  dkimproxy.in  dkimproxy.out  dkimproxy_out.conf.example  dkimsign.pl  dkimverify.pl  dkverify.pl
tests/: TestHarnass.pm  listid_map.t  lmsg2.txt  methods.t  msg1.txt  msg2.txt  msg4.txt  original4.txt  original5.txt  single_domain.conf  single_domain.t  test4.txt
tests/can/: Makefile.am  test-relaxed-relaxed.txt  test-relaxed.txt  test-simple-relaxed.txt
tests/variant_sigs/: invalid3.txt  invalid4.txt  test7.txt
