SUBDIRS = Algorithm Canonicalization

dkimdir = $(perllibdir)/Mail/DKIM
dkim_SCRIPTS = \
	Common.pm \
	KeyValueList.pm \
	MessageParser.pm \
	Policy.pm \
	PrivateKey.pm \
	PublicKey.pm \
	Signature.pm \
	Signer.pm \
	SignerPolicy.pm \
	SigningFilter.pm \
	Verifier.pm

EXTRA_DIST = \
	$(dkim_SCRIPTS) \
	test_signing_filter.pl \
	HACKING.DKIM
